# RY-SlopeSearch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
configs/: example_config.yaml  test copy.fasta  test.fasta  test_config.yaml
example/: example_config.yaml
include/model/: F_k_function.hpp  KmerCount.hpp  match_tool.hpp  ry_sampling_word_sets.hpp
include/utils/: config.hpp  dna_kmer_cache.hpp  evolution_model.hpp  file_system.hpp  logger.hpp  match_tool.hpp  progress_bar.hpp  sequence_tool.hpp
old_config/: example_config.yaml
scripts/: convert_pattern.py  converted_patterns.txt  plot.sh  plot_F_k.py
src/: main.cpp
src/model/: F_k_function.cpp  match_tool.cpp
src/utils/: config.cpp  evolution_model.cpp  file_system.cpp  logger.cpp  match_tool.cpp  progress_bar.cpp  sequence_tool.cpp
